--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "aws-sdk": "^2.727.1",
+    "date-fns": "^2.15.0",
+    "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.1",
+    "remark-html": "^12.0.0"
   }
 }
